--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,41 +10,47 @@
 .container {
   width: 100%;
   height: 100vh;
-  background-color: grey;
 }
-.container .section-one {
+.container section {
   position: relative;
+  width: 100%;
   height: 100%;
   background-image: url(/src/asset/img/SKULLS/mobileSkull.png);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* The Modal (background) */
 }
-.container .section-one nav {
+.container section nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   float: right;
 }
-.container .section-one nav .logo {
+.container section nav .logo {
+  position: fixed;
   cursor: pointer;
   width: 50%;
+  z-index: 100;
+  margin-top: 10%;
 }
-.container .section-one nav .logo img {
+.container section nav .logo img {
   width: 40%;
   transition: transform 0.2s;
 }
-.container .section-one nav .logo img:hover {
+.container section nav .logo img:hover {
   transform: scale(1.1);
   filter: drop-shadow(0px -4px 0.2rem #ffffff);
 }
-.container .section-one nav ul {
+.container section nav ul {
   display: flex;
   margin: 5%;
 }
-.container .section-one nav ul li {
+.container section nav ul li {
   cursor: pointer;
+  display: none;
   color: white;
   font-size: 16px;
   margin-right: 10px;
@@ -52,55 +58,116 @@
   font-family: "Josefin Sans", sans-serif;
   transition: all 0.2s;
 }
-.container .section-one nav ul li a {
+.container section nav ul li a {
   color: white;
   text-decoration: none;
 }
-.container .section-one nav ul li:hover {
+.container section nav ul li:hover {
   filter: drop-shadow(0px 0px 0.1rem rgba(255, 255, 255, 0.7058823529));
   transform: scale(0.9);
 }
-.container .section-one .btn-discover {
-  cursor: pointer;
-  position: absolute;
-  left: 50%;
-  top: 65%;
-  transform: translate(-50%, -50%);
-  width: 200px;
-  color: white;
-  background-color: rgba(255, 215, 0, 0.031372549);
-  border-radius: 29px;
-  padding: 1em;
-  backdrop-filter: blur(5px);
-  border: 0.1px rgba(255, 215, 0, 0.1294117647) solid;
-  font-size: 16px;
-  font-family: "Josefin Sans", sans-serif;
-  transition: all 0.2s;
+.container section .modal {
+  display: none;
+  position: fixed;
+  z-index: 200;
+  padding-top: 40%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.175); /* Black w/ opacity */
 }
-.container .section-one .btn-discover:hover {
-  transform: translate(-50%, -30%);
-  filter: drop-shadow(0px 0px 0.2rem #ffffff);
-  font-size: 16px;
-  letter-spacing: 4px;
-  background: url(/src/asset/img/SKULLS/ezgif-3-2d78fa1ff7.gif);
-  background-position: bottom;
+.container section .modal .modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+.container section .modal .modal-content p {
+  text-align: justify;
+  font-family: "Josefin Sans", sans-serif;
+}
+.container section .modal .modal-content #BG-creation {
+  font-size: 12px;
+}
+.container section .modal .close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.container section .modal .close:hover,
+.container section .modal .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.container section footer {
+  z-index: 100;
+  width: 100%;
+  position: fixed;
+  bottom: 10px;
+}
+.container section footer .container-logo {
+  display: flex;
+  justify-content: center;
+}
+.container section footer .container-logo img {
+  width: 70px;
+  height: 70px;
+  margin: 3px;
+  filter: invert(1);
+  transition: transform 0.5s ease;
+}
+.container section footer .container-logo img:hover {
+  transform: scale(0.9);
+  cursor: pointer;
+}
+.container section footer .container-logo img:nth-child(3) {
+  filter: invert(0);
+  border-radius: 20%;
+}
+.container section:nth-child(2) {
+  background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull2.png);
+  background-attachment: fixed;
+}
+.container section:nth-child(3) {
+  background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull3.png);
+  background-attachment: fixed;
+}
+.container section:nth-child(4) {
+  background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull4.png);
+  background-attachment: fixed;
+}
+.container section:nth-child(5) {
+  background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull5.png);
+  background-attachment: fixed;
+}
+.container section:nth-child(6) {
+  background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull6.png);
+  background-attachment: fixed;
 }
 
 @media screen and (min-width: 768px) {
-  .container .section-one {
-    background: url(/src/asset/img/SKULLS/desktopSkull.png);
-    background-position-y: 13%;
-    background-size: cover;
+  .container section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-position: top;
+    background-size: contain;
+    background-image: url(/src/asset/img/SKULLS/desktopSkull.png);
+    background-repeat: repeat-x;
   }
-  .container .section-one nav .logo img {
+  .container section nav .logo img {
     width: 25%;
   }
-  .container .section-one .btn-discover {
-    top: 80%;
-    width: 200px;
-    padding: 1em;
-    border: 0.1px rgba(255, 215, 0, 0.1294117647) solid;
-    font-size: 20px;
-    transition: all 0.2s;
+  .container section .modal {
+    padding-top: 30%;
+  }
+  .container section .modal .modal-content {
+    max-width: 600px;
   }
 }/*# sourceMappingURL=style.css.map */
