--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap");
 
 $primary-font: "Josefin Sans", sans-serif;
+$slideshow-width: 1000px;
 
 *,
 *::after,
@@ -13,93 +14,174 @@ $primary-font: "Josefin Sans", sans-serif;
 .container {
   width: 100%;
   height: 100vh;
-  background-color: grey;
+  // background-color: grey;
 
-  .section-one {
+  section {
     position: relative;
+    width: 100%;
     height: 100%;
     background-image: url(/src/asset/img/SKULLS/mobileSkull.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 
     nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
+
       .logo {
+        position: fixed;
         cursor: pointer;
         width: 50%;
+        z-index: 100;
+        margin-top: 10%;
 
         img {
           width: 40%;
           transition: transform 0.2s;
         }
+
         img:hover {
           transform: scale(1.1);
           filter: drop-shadow(0px -4px 0.2rem #ffffff);
         }
       }
+
       width: 100%;
       float: right;
+
       ul {
         display: flex;
         margin: 5%;
+
         li {
           cursor: pointer;
-
+          display: none;
           color: white;
           font-size: 16px;
           margin-right: 10px;
           list-style: none;
           font-family: $primary-font;
           transition: all 0.2s;
+
           a {
             color: white;
             text-decoration: none;
           }
         }
+
         li:hover {
           filter: drop-shadow(0px 0px 0.1rem #ffffffb4);
           transform: scale(0.9);
         }
       }
     }
-    .btn-discover {
-      cursor: pointer;
-      position: absolute;
-      left: 50%;
-      top: 65%;
-      transform: translate(-50%, -50%);
-      width: 200px;
-      color: white;
-      background-color: #ffd70008;
-      border-radius: 29px;
-      padding: 1em;
-      backdrop-filter: blur(5px);
-      border: 0.1px #ffd70021 solid;
-      font-size: 16px;
-      font-family: $primary-font;
-      transition: all 0.2s;
+
+    /* The Modal (background) */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 200;
+      padding-top: 40%;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0, 0, 0); /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.175); /* Black w/ opacity */
+
+      .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        p {
+          text-align: justify;
+          font-family: $primary-font;
+        }
+        #BG-creation {
+          font-size: 12px;
+        }
+      }
+
+      .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+
+      .close:hover,
+      .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+      }
     }
-    .btn-discover:hover {
-      transform: translate(-50%, -30%);
-      filter: drop-shadow(0px 0px 0.2rem #ffffff);
-      font-size: 16px;
-      letter-spacing: 4px;
-      background: url(/src/asset/img/SKULLS/ezgif-3-2d78fa1ff7.gif);
-      background-position: bottom;
+
+    footer {
+      z-index: 100;
+      width: 100%;
+      position: fixed;
+      bottom: 10px;
+      .container-logo {
+        display: flex;
+        justify-content: center;
+        img {
+          width: 70px;
+          height: 70px;
+          margin: 3px;
+          filter: invert(1);
+          transition: transform 0.5s ease;
+        }
+        img:hover {
+          transform: scale(0.9);
+          cursor: pointer;
+        }
+        img:nth-child(3) {
+          filter: invert(0);
+          border-radius: 20%;
+        }
+      }
     }
+  }
+  section:nth-child(2) {
+    background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull2.png);
+    background-attachment: fixed;
+  }
+  section:nth-child(3) {
+    background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull3.png);
+    background-attachment: fixed;
+  }
+  section:nth-child(4) {
+    background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull4.png);
+    background-attachment: fixed;
+  }
+  section:nth-child(5) {
+    background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull5.png);
+    background-attachment: fixed;
+  }
+  section:nth-child(6) {
+    background-image: url(/src/asset/img/SKULLS/slideshow-imgs/Skull6.png);
+    background-attachment: fixed;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    .section-one {
-      background: url(/src/asset/img/SKULLS/desktopSkull.png);
-      // background-position: top;
-      background-position-y: 13%;
-      background-size: cover;
+    section {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background-position: top;
+      background-size: contain;
+      background-image: url(/src/asset/img/SKULLS/desktopSkull.png);
+      background-repeat: repeat-x;
+
       nav {
         .logo {
           img {
@@ -107,16 +189,13 @@ $primary-font: "Josefin Sans", sans-serif;
           }
         }
       }
+      .modal {
+        padding-top: 30%;
 
-      .btn-discover {
-        
-        top: 80%;
-        width: 200px;
-        padding: 1em;
-        border: 0.1px rgba(255, 215, 0, 0.1294117647) solid;
-        font-size: 20px;
-        transition: all 0.2s;
-    }
+        .modal-content {
+          max-width: 600px;
+        }
+      }
     }
   }
 }
